为选项卡添加符号

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body class="mdui-theme-primary-blue-grey">
     <div class="mdui-tab mdui-tab-scrollable mdui-color-theme" mdui-tab>
       <a href="#ZOMCL" class="mdui-ripple" disabled>01-Launcher</a>
-      <a href="#zo_index" class="mdui-ripple mdui-tab-active">主页</a>
-      <a href="#zo_settings" class="mdui-ripple">设置</a>
+      <a href="#zo_index" class="mdui-ripple mdui-tab-active">🏠 主页</a>
+      <a href="#zo_settings" class="mdui-ripple">⚙️ 设置</a>
     </div>
     <div>
       <div id="zo_index" class="mdui-p-a-2">
