修复特性和添加卡顿

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
           <div class="mdui-col-sm-5 mdui-col-lg-4">
             <br>
-            <h1># 🔖 书签</h1>
+            <h1># 敬请期待</h1>
           </div>
         </div>
       </div>
@@ -62,10 +62,13 @@
             下载 <a href="./res/ZeroOneLauncher-Apple.shortcut">ZOMCL-APPLE</a> 后用 快捷指令 打开，
             然后点击下面按钮弹出的输入框内输入<code>shortcuts://run-shortcut?name=ZeroOneLauncher-Apple</code>
           </p>
-          <button onclick="setMcUrl()" class="mdui-btn mdui-btn-block mdui-color-theme mdui-ripple">调整</button>
+          <button onclick="setMcUrl()" class="mdui-btn mdui-btn-block mdui-color-theme mdui-ripple">
+            调整
+          </button>
         </div>
         <div>
           <hr>
+          <h2>...</h2>
         </div>
         <hr>
       </div>
