修改描述文件

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div id="zo_debug" class="mdui-p-a-2">
-        <button onclick="startDebug()">OOO</button>
+        <button onclick="startDebug()">startDebug()</button>
       </div>
     </div>
 
